kube/cert.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.provider: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
  name: starcry
  namespace: starcry
spec:
  rules:
  - host: sc.cppse.nl
    http:
      paths:
      - backend:
          serviceName: starcry
          servicePort: 18080
        path: /
  tls:
  - hosts:
    - sc.cppse.nl
    secretName: starcry-tls
