kube/starcry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: starcry
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: server=deskmini
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starcry
  namespace: starcry
spec:
  selector:
    matchLabels:
      app: starcry
      tier: starcry
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: starcry
        tier: starcry
    spec:
      containers:
      - name: starcrycontainer
        image: rayburgemeestre/starcry-no-gui:v6
        command: ["/starcry"]
        #args: ["-i", "--notty"]
        args: ["-i", "-t", "8", "-c", "8", "--caching", "--notty", "--no-gui", "input/perlin3.js"]
        workingDir: /workdir
#        volumeMounts:
#        - mountPath: /workdir
#          name: workdir-volume
        imagePullPolicy: Always
        ports:
        - containerPort: 18080
          name: http
#      volumes:
#      - name: workdir-volume
#        hostPath:
#          path: /mnt2/NAS/projects/starcry
---
apiVersion: v1
kind: Service
metadata:
  name: starcry
  namespace: starcry
  labels:
    app: starcry
    tier: starcry
spec:
  type: NodePort
  ports:
  - port: 18080
    name: http
  selector:
    app: starcry
    tier: starcry
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.provider: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
  name: starcry
  namespace: starcry
spec:
  rules:
  - host: sc.cppse.nl
    http:
      paths:
      - backend:
          serviceName: starcry
          servicePort: 18080
        path: /
  tls:
  - hosts:
    - sc.cppse.nl
    secretName: starcry-tls
